Thu Jan 27 01:35:35 CET 2005 (tk)
---------------------------------
  * freshclam/manager.c: add support for HTTP/1.0 ansers in IMS (--no-dns) mode
			 (patch by Sven Strickroth <sstrickroth@gym-oha.de>)

Wed Jan 26 19:27:57 CET 2005 (tk)
---------------------------------
  V 0.81

Wed Jan 26 18:20:40 GMT 2005 (trog)
-----------------------------------
  * clamd/server-th.c: always check if we need to end the SESSION.

Wed Jan 26 19:01:27 CET 2005 (tk)
---------------------------------
  * libclamav/others: increase f-level

Wed Jan 26 18:37:45 CET 2005 (tk)
---------------------------------
  * minor cleanup

Wed Jan 26 17:26:03 GMT 2005 (trog)
-----------------------------------
  * clamd/server-th.c clamd/session.c clamd/session.h: fixup SESSION mode.

Wed Jan 26 17:40:56 CET 2005 (tk)
---------------------------------
  * docs: update

Wed Jan 26 15:25:56 CET 2005 (tk)
---------------------------------
  * freshclam/manager.c: wwwconnect(): use new socket after failure (patch by 
			 Geoff Gibbs <ggibbs*hgmp.mrc.ac.uk>)

Wed Jan 26 15:10:02 CET 2005 (tk)
---------------------------------
  * shared/misc.c: freshdbdir(): fix possible dbdir string corruption
		   (reported by ST Wong <st-wong*cuhk.edu.hk>)

Wed Jan 26 10:38:08 CET 2005 (tk)
---------------------------------
  * configure: improve curl check (thanks to Martin Forssen <maf*appgate.com>)

Wed Jan 26 10:15:47 CET 2005 (tk)
---------------------------------
  * shared/output.c: change output modes (more stdout output). Patch by
		     Stephen Gran <steve*lobefin.net>.

Wed Jan 26 09:23:48 CET 2005 (tk)
---------------------------------
  * libclamav/snprintf.c: add missing MAX macro (thanks to Ted Mittelstaedt
			  <tedm*toybox.placo.com>)

Tue Jan 25 08:12:51 GMT 2005 (njh)
----------------------------------
  * clamav-milter:	Internal mode is now the default. Removed --internal
				option, added --external.
			Don't use clamd's SESSION mode, since that causes