@@ -1,3 +1,13 @@
+Thu Jan 27 10:55:35 GMT 2005 (njh)
+----------------------------------
+  * clamav-milter:	Don't scan emails intended for the --quarantine address,
+				that stops scanning of emails generated with
+				viruses if --outgoing has been set
+			Downgraded scanmail not defined if --external isn't
+				given from error to warning
+			Added -i flag when calling sendmail, suggested by
+				Michal Jaegermann <michal@harddata.com>
+
 Thu Jan 27 01:35:35 CET 2005 (tk)
 ---------------------------------
   * freshclam/manager.c: add support for HTTP/1.0 ansers in IMS (--no-dns) mode
